--- a/CarpoolManagment/Pages/_ViewImports.cshtml
+++ b/CarpoolManagment/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CarpoolManagment
-@namespace CarpoolManagment.Pages
+﻿@using CarpoolManagement
+@namespace CarpoolManagement.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
